# prjxray

./: .gitignore  BUILD  MODULE.bazel  shell.nix
lib/: big_endian_span_test.cc  bit_ops_test.cc  database.cc  memory_mapped_file.cc  memory_mapped_file_test.cc  segbits_file_reader.cc  segbits_file_reader_test.cc
lib/include/prjxray/: big_endian_span.h  database.h  memory_mapped_file.h  segbits_file_reader.h
lib/include/prjxray/xilinx/: architectures.h  bitstream_reader.h  bitstream_writer.h  configuration.h  configuration_packet.h  configuration_packet_with_payload.h  frames.h  nop_packet.h
lib/xilinx/: bitstream_writer.cc  configuration.cc  configuration_packet.cc  configuration_register.cc  frames.cc
lib/xilinx/spartan6/: block_type.cc  configuration_bus.cc  configuration_column.cc  configuration_row.cc  frame_address.cc  global_clock_region.cc  part.cc
lib/xilinx/tests/spartan6/: bitstream_reader_test.cc  bitstream_writer_test.cc  block_type_test.cc  configuration_bus_test.cc  configuration_column_test.cc  configuration_packet_test.cc  configuration_test.cc  frame_address_test.cc  frames_test.cc  global_clock_region_test.cc  part_test.cc  row_test.cc
lib/xilinx/tests/xc7series/: bitstream_reader_test.cc  bitstream_writer_test.cc  block_type_test.cc  configuration_bus_test.cc  configuration_column_test.cc  configuration_packet_test.cc  configuration_test.cc  crc_test.cc  ecc_test.cc  row_test.cc  (+4 more)
lib/xilinx/xc7series/: block_type.cc  configuration_bus.cc  configuration_column.cc  configuration_row.cc  ecc.cc  frame_address.cc  global_clock_region.cc  part.cc
(+13 files in other folders)
