module(
    name = "prjxray",
    version = "0.0-583-t1e53270",
)

bazel_dep(name = "rules_cc", version = "0.0.16")
# Until this is merged: https://github.com/bazelbuild/rules_cc/pull/306
git_override(
    module_name = "rules_cc",
    commit = "4d6035a37b3211dec0fa5c070c7e9aac0e05186e",
    remote = "https://github.com/lromor/rules_cc.git",
)

bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "googletest", version = "1.15.2")
